make changes on style.scss

--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arch-studio</title>
-    <link rel="stylesheet" href="scss/style.scss">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 
 <body>
-<header>
-    <div class="nav">
-        <img src="img-first-page/header-logo.svg" alt="header-logo">
-        <ul>
-            <li>Portfolio</li>
-            <li>About Us</li>
-            <li>Contact</li>
-        </ul>
-    </div>
-    <div class="wrapper">
-    </div>
-</header>
+    <header>
+        <div class="nav container">
+            <img src="img-first-page/header-logo.svg" alt="header-logo">
+            <ul>
+                <li>Portfolio</li>
+                <li>About Us</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="wrapper">
+            <div class="promo">
+                <h1>Project Paramour</h1>
+                <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern
+                    architecture.</p>
+                <button><p>See Our Portfolio</p><img src="img-first-page/button-arrow.png" alt="arrow"></button>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
