--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
             </ul>
         </div>
         <div class="wrapper">
-            <div class="promo">
+            <div class="promo container">
                 <h1>Project Paramour</h1>
                 <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern
                     architecture.</p>
-                <button><p>See Our Portfolio</p><img src="img-first-page/button-arrow.png" alt="arrow"></button>
+                <button>
+                    <p>See Our Portfolio</p>
+                    <h3>⇨</h3>
+                </button>
             </div>
         </div>
     </header>
