add a promo section and full it with cards

--- a/index.html
+++ b/index.html
@@ -23,11 +23,28 @@
                 <h1>Project Paramour</h1>
                 <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern
                     architecture.</p>
-                <button>
-                    <p>See Our Portfolio</p>
-                    <h3>⇨</h3>
-                </button>
+                <div class="btn">
+                    <a href="#">
+                        <button>See Our Portfolio ⇨</button>
+                    </a>
+
             </div>
+            <div class="cards">
+                <div class="card first">
+                    01
+                </div>
+                <div class="card">
+                    02
+                </div>
+                <div class="card">
+                    03
+                </div>
+                <div class="card">
+                    04
+                </div>
+
+            </div>
+        </div>
         </div>
     </header>
 </body>
