--- a/index.html
+++ b/index.html
@@ -27,26 +27,44 @@
                     <a href="#">
                         <button>See Our Portfolio ⇨</button>
                     </a>
+                </div>
+                <div class="cards">
+                    <div class="card first">
+                        01
+                    </div>
+                    <div class="card">
+                        02
+                    </div>
+                    <div class="card">
+                        03
+                    </div>
+                    <div class="card">
+                        04
+                    </div>
 
+                </div>
             </div>
-            <div class="cards">
-                <div class="card first">
-                    01
-                </div>
-                <div class="card">
-                    02
-                </div>
-                <div class="card">
-                    03
-                </div>
-                <div class="card">
-                    04
-                </div>
-
-            </div>
-        </div>
         </div>
     </header>
+
+    <div class="introduction container">
+        <div class="title">
+            <h2>Welcome</h2>
+            <div class="welcome">
+                <h2>Welcome to Arch Studio</h2>
+                <p>We have a unique network and skillset to help bring your projects to life. Our small team of highly
+                    skilled individuals combined with our large network put us in a strong position to deliver
+                    exceptional results.
+
+                    <br>Over the past 10 years, we have worked on all kinds of projects. From stations to high-rise
+                    buildings, we create spaces that inspire and delight.
+
+                    <br>We work closely with our clients so that we understand the intricacies of each project. This allows
+                    us to work in harmony the surrounding area to create truly stunning projects that will stand the
+                    test of time.</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
