add an additional sections such as introduction,small-team,about and etc.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
             </div>
         </div>
     </header>
-
     <div class="introduction container">
         <div class="title">
             <h2>Welcome</h2>
@@ -59,11 +58,46 @@
                     <br>Over the past 10 years, we have worked on all kinds of projects. From stations to high-rise
                     buildings, we create spaces that inspire and delight.
 
-                    <br>We work closely with our clients so that we understand the intricacies of each project. This allows
+                    <br>We work closely with our clients so that we understand the intricacies of each project. This
+                    allows
                     us to work in harmony the surrounding area to create truly stunning projects that will stand the
-                    test of time.</p>
+                    test of time.
+                </p>
             </div>
         </div>
+    </div>
+    <div class="small-team container">
+        <div class="info">
+            <h4>Small team, big ideas</h4>
+            <div class="btn">
+                <a href="#">
+                    <button>About Us ⇨</button>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="about-featured container">
+        <h4>Featured</h4>
+        <div class="btn">
+            <a href="#">
+                <button>See All ⇨</button>
+            </a>
+        </div>
+    </div>
+    <div class="about container">
+        <div class="about-first"><img src="img-first-page/about-first.png" alt="about-first"></div>
+        <div class="about-first-tablet"><img src="img-first-page/about-first-tablet.png" alt="about-first-tablet"></div>
+        <div class="about-first-mobile"><img src="img-first-page/about-first-mobile.png" alt="about-first-mobile">
+        </div>
+        <div class="about-sec"><img src="img-first-page/about-second.png" alt="about-sec"></div>
+        <div class="about-sec-tablet"><img src="img-first-page/about-second-tablet.png" alt="about-sec-tablet"></div>
+        <div class="about-sec-mobile"><img src="img-first-page/about-third-tablet.png" alt="about-sec-mobile">
+        </div>
+        <div class="about-third"><img src="img-first-page/about-third.png" alt="about-third"></div>
+        <div class="about-third-tablet"><img src="img-first-page/about-third-tablet.png" alt="about-third-tablet"></div>
+        <div class="about-third-mobile"><img src="img-first-page/about-third-mobile.png" alt="about-third-mobile">
+        </div>
+
     </div>
 </body>
 
