add an about section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             </a>
         </div>
     </div>
-    <div class="about container">
+    <div class="about container
+    ">
         <div class="about-first"><img src="img-first-page/about-first.png" alt="about-first"></div>
         <div class="about-first-tablet"><img src="img-first-page/about-first-tablet.png" alt="about-first-tablet"></div>
         <div class="about-first-mobile"><img src="img-first-page/about-first-mobile.png" alt="about-first-mobile">
