add various sections

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
                 <li>About Us</li>
                 <li>Contact</li>
             </ul>
+            <div class="menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
         <div class="wrapper">
             <div class="promo container">
                 <h1>Project Paramour</h1>
-                <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold, modern
+                <p>Project made for an art museum near Southwest London. Project Paramour is a statement of bold,
+                    modern
                     architecture.</p>
                 <div class="btn">
                     <a href="#">
@@ -50,7 +56,7 @@
         <div class="title">
             <h2>Welcome</h2>
             <div class="welcome">
-                <h2>Welcome to Arch Studio</h2>
+                <h3>Welcome to Arch Studio</h3>
                 <p>We have a unique network and skillset to help bring your projects to life. Our small team of highly
                     skilled individuals combined with our large network put us in a strong position to deliver
                     exceptional results.
@@ -79,26 +85,90 @@
     <div class="about-featured container">
         <h4>Featured</h4>
         <div class="btn">
-            <a href="#">
+            <a href="http://127.0.0.1:5501/">
                 <button>See All ⇨</button>
             </a>
         </div>
     </div>
-    <div class="about container
-    ">
-        <div class="about-first"><img src="img-first-page/about-first.png" alt="about-first"></div>
-        <div class="about-first-tablet"><img src="img-first-page/about-first-tablet.png" alt="about-first-tablet"></div>
-        <div class="about-first-mobile"><img src="img-first-page/about-first-mobile.png" alt="about-first-mobile">
+    <div class="about container ">
+        <div class="about-desktop"><img src="img-first-page/about-first.png" alt="about-first">
+            <div class="some-text">
+                <h4>1</h4>
+                <h5> Project Del Sol </h5>
+                <p>View All Projects</p>
+            </div>
         </div>
-        <div class="about-sec"><img src="img-first-page/about-second.png" alt="about-sec"></div>
-        <div class="about-sec-tablet"><img src="img-first-page/about-second-tablet.png" alt="about-sec-tablet"></div>
-        <div class="about-sec-mobile"><img src="img-first-page/about-third-tablet.png" alt="about-sec-mobile">
+        <div class="about-tablet"><img src="img-first-page/about-first-tablet.png" alt="about-first-tablet">
+            <h4>1</h4>
+            <div class="some-text">
+                <h5> Project Del Sol </h5>
+                <p>View All Projects</p>
+            </div>
         </div>
-        <div class="about-third"><img src="img-first-page/about-third.png" alt="about-third"></div>
-        <div class="about-third-tablet"><img src="img-first-page/about-third-tablet.png" alt="about-third-tablet"></div>
-        <div class="about-third-mobile"><img src="img-first-page/about-third-mobile.png" alt="about-third-mobile">
+        <div class="about-mobile"><img src="img-first-page/about-first-mobile.png" alt="about-first-mobile">
+            <div class="some-text">
+                <h5> Project Del Sol </h5>
+                <p>View All Projects</p>
+            </div>
         </div>
-
+        <div class="about-desktop"><img src="img-first-page/about-second.png" alt="about-sec">
+            <div class="some-text">
+                <h4>2</h4>
+                <h5> 228B Tower </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="about-tablet"><img src="img-first-page/about-second-tablet.png" alt="about-sec-tablet">
+            <h4>2</h4>
+            <div class="some-text">
+                <h5> 228B Tower </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="about-mobile"><img src="img-first-page/about-second-mobile.png" alt="about-sec-mobile">
+            <div class="some-text">
+                <h5> 228B Tower </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="about-desktop"><img src="img-first-page/about-third.png" alt="about-third">
+            <div class="some-text">
+                <h4>3</h4>
+                <h5> Le Prototype </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="about-tablet"><img src="img-first-page/about-third-tablet.png" alt="about-third-tablet">
+            <h4>3</h4>
+            <div class="some-text">
+                <h5> Le Prototype </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="about-mobile"><img src="img-first-page/about-third-mobile.png" alt="about-third-mobile">
+            <div class="some-text">
+                <h5> Le Prototype </h5>
+                <p>View All Projects</p>
+            </div>
+        </div>
+        <div class="btn">
+            <a href="http://127.0.0.1:5501/">
+                <button>See All ⇨</button>
+            </a>
+        </div>
+    </div>
+    <div class="footer container">
+        <div class="back"><img src="img-first-page/footer-logo.svg" alt="footer-logo"></div>
+        <ul>
+            <li>Portfolio</li>
+            <li>About Us</li>
+            <li>Contact</li>
+        </ul>
+        <div class="btn">
+            <a href="#">
+                <button>See Our Portfolio ⇨</button>
+            </a>
+        </div>
     </div>
 </body>
 
